SERVER-13766 SubplanRunner::kill() needs to clear _collection

For all child classes of Runner, implementations of Runner::kill()
must guarantee the postcondition that subsequent calls to
Runner::collection() will return NULL.  SubplanRunner:kill() was not
meeting this contract.